fix(frontend): Make mini-map collapsable
To maximize screen estate, especially on smaller devices, it should be
possible for the user to minimize the mini-map.

--- a/client/src/mini-map/mini-map.control.css
+++ b/client/src/mini-map/mini-map.control.css
@@ -1,12 +1,24 @@
 .mini-map-control {
+}
+
+.mini-map-container {
   height: 10rem;
   width: 20rem;
   border: 2px solid #fff;
 }
 
 .mini-map-handle {
+  float: right;
   background-color: #fff;
   color: #000;
   padding: 0.5rem;
   cursor: move;
+}
+
+.toggle-mini-map {
+  float: left;
+  background-color: #fff;
+  color: #000;
+  padding: 0.5rem;
+  cursor: pointer;
 }
